k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: insurance-backend
spec:
  selector:
    app: insurance-backend
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 5000
